# dotfiles-installer

./: .gitignore  README.md  pyproject.toml  setup.cfg
dotinstaller/: cli.py  dotinit.py  dotinstall.py  dotmanage.py  settings.py  tui.py
dotinstaller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/configs/: IRF081.cfg
